# nbcraft

./: .gitignore  .gitmodules  CMakeLists.txt  GameMods.hpp  Makefile  README.md  flake.nix
.github/workflows/: artifacts.yml  build.yml  publish.yml
compat/: GameVersion.h  Integers.h  KeyCodes.hpp  LimitMacros.h  Limits.hpp  Limits_legacy.hpp  PlatformDefinitions.h  limits.hpp
game/assets/: .gitignore  readme.txt
game/assets/lang/: en_US.lang  en_us.json
game/assets/materials/: entity.material  sky.material  ui.material  ui3D.material
misc/nix/: package.nix
projects/visual-studio/: Directory.Build.props  NBCraft.Cpp.Default.props  NBCraft.sln
projects/visual-studio/Audio.DirectSound/: Audio.DirectSound.vcxproj
projects/visual-studio/Audio.Dummy/: Audio.Dummy.vcxproj
projects/visual-studio/Audio.OpenAL/: Audio.OpenAL.vcxproj
projects/visual-studio/Audio.XAudio2/: Audio.XAudio2.vcxproj
projects/visual-studio/COM/: COM.vcxproj
projects/visual-studio/Client/: Client.vcxproj  Client.vcxproj.filters
projects/visual-studio/Common/: Common.vcxproj  Common.vcxproj.filters
projects/visual-studio/Input.XInput/: Input.XInput.vcxproj
projects/visual-studio/LevelDB/: LevelDB.vcxproj  LevelDB.vcxproj.filters
projects/visual-studio/NBCraftClient.SDL1/: NBCraftClient.SDL1.vcxproj
projects/visual-studio/NBCraftClient.SDL2/: NBCraftClient.SDL2.vcxproj
projects/visual-studio/NBCraftClient.Win32/: NBCraftClient.Win32.vcxproj
projects/visual-studio/NBCraftClient.XDK360/: NBCraftClient.XDK360.vcxproj
projects/visual-studio/NBT/: NBT.vcxproj  NBT.vcxproj.filters
projects/visual-studio/Network/: Network.vcxproj  Network.vcxproj.filters
projects/visual-studio/OpenGL/: OpenGL.vcxproj
projects/visual-studio/RakNet/: RakNet.vcxproj
projects/visual-studio/Renderer.D3D/: Renderer.D3D.vcxproj  Renderer.D3D.vcxproj.filters
source/: CMakeLists.txt
source/common/: File.cpp  File.hpp  MovePriorityQueue.hpp  Mth.cpp  Mth.hpp  Random.cpp  Random.hpp  Util.cpp  Util.hpp  Utils.cpp  Utils.hpp
source/nbt/: CompoundTag.cpp  ListTag.cpp  ListTag.hpp
source/network/: OrderingChannel.hpp  Packet.hpp  PacketUtil.cpp  RakNetInstance.cpp  RakNetInstance.hpp
source/renderer/: ConstantBufferMetaData.cpp  ConstantBufferMetaData.hpp  ConstantBufferMetaDataManager.cpp  MatrixStack.cpp  Mesh.cpp  Mesh.hpp  PlatformDefinitions.h  QuadIndexBuffer.cpp  RenderMaterial.cpp  RenderMaterial.hpp  UniformMetaData.cpp  UniformMetaData.hpp  VertexFormat.cpp  VertexFormat.hpp
source/renderer/hal/d3d/: API_D3D.cpp  CMakeLists.txt  RenderContextD3D.cpp  RenderContextD3D.hpp  RenderDeviceD3D.cpp  RenderDeviceD3D.hpp  ShaderProgramD3D.cpp  ShaderProgramD3D.hpp
source/renderer/hal/d3d11/: BufferD3D11.cpp  BufferD3D11.hpp  CMakeLists.txt  ImmediateBufferD3D11.cpp  ImmediateBufferD3D11.hpp  RenderContextD3D11.cpp  RenderContextD3D11.hpp  ShaderD3D11.cpp  ShaderD3D11.hpp  ShaderProgramD3D11.cpp  ShaderProgramD3D11.hpp
source/renderer/hal/dxgi/: CMakeLists.txt
source/renderer/hal/null/: CMakeLists.txt  FogStateNull.cpp  FogStateNull.hpp  VertexBufferStateNull.cpp  VertexBufferStateNull.hpp
source/renderer/hal/ogl/: API_OGL.cpp  API_OGL.hpp  BufferOGL.cpp  BufferOGL.hpp  CMakeLists.txt  ImmediateBufferOGL.cpp  ImmediateBufferOGL.hpp  RenderContextOGL.cpp  RenderContextOGL.hpp  RenderStateOGL.cpp  RenderStateOGL.hpp  ShaderOGL.cpp  ShaderOGL.hpp  ShaderProgramOGL.cpp  ShaderProgramOGL.hpp  VertexBufferStateOGL.cpp  VertexBufferStateOGL.hpp
source/server/: ServerPlayer.cpp  ServerPlayer.hpp  ServerSideNetworkHandler.cpp  ServerSideNetworkHandler.hpp
source/world/: Facing.cpp  Facing.hpp
(+862 files in other folders)
